# f4ee-detours

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  deploy.bat  vcpkg.json
cmake/: Plugin.hpp.in  Version.rc.in
include/: PCH.hpp  remove_overlay_detour.h
src/: main.cpp
